--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -2,14 +2,14 @@
     "layer": "top", // Waybar at top layer
     "height": 30, // Waybar height (to be removed for auto height)
     "padding-top": 6,
-    "padding-left": 10,
     "padding-bottom": 6,
+    "padding-left": 10,
     "padding-right": 10,
     "spacing": 2, // Gaps between modules (4px)
     // "modules-left": ["custom/launcher", "cpu", "memory", "wlr/workspaces"],
     "modules-left": ["cpu", "memory" ,"wlr/workspaces"],
-    "modules-center": ["hyprland/window"],
-    "modules-right": ["tray", "pulseaudio", "network", "clock", "custom/power-menu"],
+    "modules-center": ["clock"],
+    "modules-right": ["tray", "pulseaudio", "network", "custom/power-menu"],
     "wlr/workspaces": {
       "format": "{}",
       "disable-scroll": true,
@@ -44,12 +44,15 @@
     "tray": {
         "spacing": 10
     },
-    "clock": {
-      "format": "<span color='#bf616a'> </span>{:%H:%M}",
-      "format-alt": "<span color='#bf616a'> </span>{:%Y-%m-%d}",
-      "tooltip-format": "<big>{:%Y-%m-%d}</big>\n<tt><small>{calendar}</small></tt>",
+    "custom/clock": {
+      "format": "<span color='#ff5c57'> </span>{:%H:%M}",
     },
-
+    "clock": {
+      // "format": "<span color='#ff5c57'> </span>{:%H:%M}",
+      "format": "{:%Y-%m-%d %H:%M}",
+      "format-alt": "<span color='#ff5c57'> </span>{:%Y-%m-%d}",
+      "tooltip-format": "<big>{:%Y-%m-%d}</big>\n<tt>{calendar}</tt>",
+    },
     "cpu": {
       "interval": 10,
       "format": " {}%",
@@ -110,11 +113,11 @@
     "on-scroll-down": "playerctl previous",
     },
     "custom/power-menu": {
-        "format": " <span color='#6a92d7'>⏻ </span>",
+        "format": " <span color='#57c7ff'>⏻ </span>",
         "on-click": "bash ~/.config/waybar/scripts/power-menu/powermenu.sh",
     },
     "custom/launcher": {
-        "format": " <span color='#6a92d7'> </span>",
+        "format": " <span color='#57c7ff'> </span>",
         "on-click": "rofi -show drun",
     },
 }
